fix vertical overflow in page editor

--- a/src/components/PageForm/PageForm.css
+++ b/src/components/PageForm/PageForm.css
@@ -15,7 +15,8 @@
 }
 
 .page-form .page-content-editor .formic-form-textarea {
-  min-height: 80vh;
+  min-height: 600px;
+  height: auto;
 }
 
 .page-form .bottom-bar-flex {
